# vercajk

./: .ansible-lint  .gitignore  .gitmodules  .packit.yaml  .pre-commit-config.yaml  .prettierrc.yml  FLATPAK.md  INSTALLATION.md  KICKSTART.md  Makefile  PLYMOUTH.md  README.md  ansible.cfg  base.ks  complete_kickstart.ks  dotfiles  justfile  vercajk.ks
ansible/: play_dotfiles.yml  play_one_timers.yml  play_system.yml  play_user.yml  tags
autostart/: conky-startup.sh
cli/: complete_kickstart.ks  pyproject.toml  vercajk  vercajk-cli.spec
cli/tests/: conftest.py  test_ansible_runner.py  test_cli_base.py  test_config.py  test_fish_converter.py  test_kickstart.py  test_update.py  test_usb.py  test_utils.py
cli/vercajk/: ansible.py  config.py  constants.py  exceptions.py  fish_converter.py  img.py  path.py  pozustatek.py  spells.py
cli/vercajk/cli/: base.py  ci.py  fish.py  kickstart.py
cli/vercajk/cli/ansible/: base.py  dotfiles.py  one_timers.py  system.py  update.py  user.py
cli/vercajk/cli/image/: base.py  burn.py  iso.py  kickstart.py  usb.py  vm.py
cli/vercajk/cli/snapshot/: base.py
cli/vercajk/cli/test/: base.py
cli/vercajk/core/: ansible.py  btrfs.py  config.py  constants.py  exceptions.py  fish_converter.py  image.py  utils.py
conky/: default.conkyrc
files/: image_template.ks.j2  vercajk-firstboot.service  vercajk-firstboot.sh
git/: .gitconfig
konsave/: the-best-kde-profile.knsv
rpm/: vercajk.spec
shell/: aliases  scripts  variables
shell/bash/: aliases  (+1 more)
test/: Containerfile  test_deploy.sh
vercajk/: dependencies.yaml
vim/: .vimrc
(+286 files in other folders)
