[tool.poetry]
name = "vercajk"
version = "1.0.0"
description = "My personal vercajk"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
vercajk = "vercajk.cli.base:vercajk_cli"
