[tool.poetry]
name = "vercajk"
version = "1.0.0"
description = "My personal vercajk - CLI for system provisioning, dotfiles, and image management"
authors = ["Jiri Kyjovsky <j1.kyjovsky@gmail.com>"]
packages = [{include = "vercajk"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1"
jinja2 = "^3.1"
pyyaml = "^6.0"
pydantic = "^2.0"
requests = "^2.31"

[tool.poetry.group.vm.dependencies]
libvirt-python = ">=9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-click = "^1.1"
ruff = ">=0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vercajk = "vercajk.cli.base:vercajk_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
